[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
hex = "0.4"
indexmap = "1.9.1"
